--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <!-- Hide map from the a11y tree as its content available in the restaurant list-->
+    <section id="map-container" aria-hidden="true">
       <div id="map"></div>
     </section>
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" aria-label="Filter by Neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" aria-label="Filter by cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
